--- a/package.json
+++ b/package.json
@@ -6,7 +6,16 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "mocha --harmony"
+    "test": "npm run coveralls",
+    "coverage": "npm run coverage:report",
+    "coverage:build": "rm -rf coverage && node --harmony node_modules/.bin/istanbul cover _mocha",
+    "coverage:report": "npm run coverage:build && istanbul report",
+    "coverage:html": "npm run coverage:report && open coverage/lcov-report/index.html",
+    "coveralls": "npm run coverage:build && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/Qard/corm-jsonschema.git"
   },
   "keywords": [
     "corm",
@@ -17,6 +26,8 @@
     "jsonschema": "^0.4.0"
   },
   "devDependencies": {
+    "istanbul": "git://github.com/gotwarlost/istanbul.git#harmony",
+    "coveralls": "^2.10.0",
     "co-mocha": "0.0.4",
     "corm": "^0.2.0",
     "mocha": "^1.18.2",
